--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.2.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
